[package]
name = "mqtt_sub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
paho-mqtt = { version = "0.12.2", default-features = false, features = ["bundled"] }
